<resources>
    <string name="app_name">Computer Basics</string>
    <string name="start_menu">Learn Computer Basics\nFor Beginners</string>
    <string name="start_menu_description">it is start menu photo</string>
    <string name="so">so</string>
    <string name="main_menu_text">Are you ready for \nthis journey ?</string>
    <string name="lets_start_text">Let\'s Start</string>
    <string name="main_menu_description">it is main menu photo</string>
    <string name="choose_menu">Choose Menu</string>
    <string name="choose_img_description_1">it is hardware img</string>
    <string name="choose_img_description_2">it is software img</string>
    <string name="hardware_button_text">Hardware</string>
    <string name="software_button_text">Software</string>
    <string name="hardware_menu">Hardware Menu</string>
    <string name="internal_photo_description">it is internal photo</string>
    <string name="external_photo_description">it is external photo</string>
    <string name="external_text">External</string>
    <string name="internal_text">Internal</string>
    <string name="external_menu">External Menu</string>
    <string name="motherboard_des">motherboard image</string>
    <string name="motherboard_text">The <b>motherboard</b> is the main circuit board of a computer that connects and allows communication between all components</string>
    <string name="next_button">Next</string>
    <string name="cpu_des">cpu image</string>
    <string name="cpu_text">The <b>CPU</b>  (Central Processing Unit) is the brain of the computer that processes instructions, performs calculations</string>
    <string name="hard_drive_des">hard drive image</string>
    <string name="hard_drive_text">A computer <b>hard drive </b>is a data storage device used to store and retrieve digital information. It can be either a Hard Disk Drive (HDD)</string>
    <string name="ram_des">ram image</string>
    <string name="ram_text"><b>RAM (Random Access Memory)</b> is a computer\'s short-term memory that temporarily stores data and instructions needed for running applications and processes.</string>
    <string name="ssd_des">ssd image</string>
    <string name="ssd_text"><b>SSD (Solid-State Drive)</b> is a storage device that uses flash memory to store data, providing faster read/write speeds compared to traditional hard drives (HDDs). </string>
    <string name="graphic_card_des">graphic card image</string>
    <string name="graphic_card_text"><b>A graphics card (GPU - Graphics Processing Unit)</b> is a hardware component in a computer responsible for rendering images, videos, and animations.</string>
    <string name="cooling_system_des">cooling system image</string>
    <string name="cooling_system_text">A computer <b>cooling system</b> is designed to prevent overheating by dissipating heat generated by components like the CPU and GPU</string>
    <string name="power_supply_des">power supply image</string>
    <string name="power_supply_text">A computer <b>power supply</b> converts electrical power from an outlet into usable power for the computer’s internal components.</string>
    <string name="dvd_drive_des">dvd drive image</string>
    <string name="dvd_drive_text">A computer <b>DVD drive</b> is an optical drive that reads and writes data to DVDs and CDs.</string>
    <string name="about_us">About Us</string>
    <string name="internal_menu">Internal Menu</string>
    <string name="wireless_card_des">wireless card image</string>
    <string name="wireless_card_text">A computer <b>wireless card</b>, also known as a Wi-Fi card, is a hardware component that allows a computer to connect to wireless networks.</string>
    <string name="case_des">case image</string>
    <string name="case_text">A computer <b>case</b>, also known as a chassis or tower, is the enclosure that houses and protects the internal components of a computer</string>
    <string name="monitor_des">monitor image</string>
    <string name="monitor_text">A computer <b>monitor</b> is an output device that displays visual information from the computer.</string>
    <string name="mouse_des">mouse image</string>
    <string name="mouse_text">A computer <b>mouse</b> is an input device used to control the cursor on a computer screen.</string>
    <string name="keyboard_des">keyboard image</string>
    <string name="keyboard_text">A computer <b>keyboard</b> is an input device used to enter text, commands, and control functions into a computer.</string>
    <string name="speaker_des">speaker image</string>
    <string name="speaker_text">A computer <b>speaker </b>is an output device that produces audio from a computer.</string>
    <string name="webcam_des">webcam image</string>
    <string name="webcam_text">A computer <b>webcam</b> is an input device that captures video and images for purposes such as video conferencing, streaming, and online communication.</string>
    <string name="usb_hard_disk_des">usb hard disk image</string>
    <string name="usb_hard_disk_text">A computer <b>USB hard disk</b> is an external storage device that connects to a computer via a USB port. </string>
    <string name="joystick_des">joystick image</string>
    <string name="joystick_text">A <b>joystick</b> is an input device used to control movement in computer games and simulations.</string>
    <string name="software_menu">Software Menu</string>
    <string name="monitor_menu_text">Monitor</string>
    <string name="monitor_img_1">this is monitor image 1</string>
    <string name="monitor_img_2">this is monitor image 2</string>
    <string name="monitor_img_3">this is monitor image 3</string>
    <string name="monitor_teach">A computer <b>monitor</b> is an electronic output device that displays visual information from a computer. It allows users to interact with their system by providing a graphical representation of applications, data, and media. The monitor serves as an interface between the user and the computer\'s processing unit.
    \n\n<b>Common Uses of Computer Monitors</b>
    \n1.  <b>General Use:</b> Web browsing, office work, education.
    \n2.  <b>Gaming:</b> High refresh rates and low response time for smooth gameplay.
    \n3.  <b>Graphic Design and Video Editing:</b> Color accuracy and high resolutions.
    \n4.  <b>Stock Trading:</b> Multiple monitor setups for tracking multiple charts.
    \n5.  <b>Programming:</b> Wide screens or dual monitors for coding efficiency.
    \n\nA computer <b>monitor</b> is an essential device that provides visual feedback to users. With various types, features, and use cases, choosing the right monitor depends on your specific needs, whether for work, gaming, or entertainment. \n\n</string>
    <string name="mouse_menu_text">Mouse</string>
    <string name="mouse_img_1">this is mouse image 1</string>
    <string name="mouse_img_2">this is mouse image 2</string>
    <string name="mouse_img_3">this is mouse image 3</string>
    <string name="mouse_teach">A computer <b>mouse</b> is a handheld input device used to control a computer\'s graphical user interface (GUI). It allows users to move a pointer (cursor) on the screen and perform actions such as selecting, dragging, and opening files or programs by clicking buttons on the mouse.\n\n
      <b>Functions of a Computer Mouse</b>
    \n The primary functions of a mouse include:
    \n <b>Pointing: </b>Moving the cursor to select items on the screen.
    \n <b>licking:</b>C Pressing buttons to open files, links, or execute commands.
    \n <b>Dragging and Dropping:</b> Moving files or objects from one place to another.
    \n <b>Scrolling:</b> Navigating through documents and web pages using the scroll wheel.
    \n <b>Right-Click Menu:</b> Accessing context menus for additional options.
    \n\nThe computer mouse is an essential input device for navigating and interacting with digital environments. Whether for general use, gaming, or professional applications, choosing the right mouse depends on factors like precision, ergonomics, and connectivity.\n\n</string>
    <string name="keyboard_menu_text">Keyboard</string>
    <string name="keyboard_img_1">this is keyboard image 1</string>
    <string name="keyboard_img_2">this is keyboard image 2</string>
    <string name="keyboard_img_3">this is keyboard image 3</string>
    <string name="keyboard_teach">A computer keyboard is an input device that allows users to enter text, commands, and other data into a computer or similar device. It consists of a set of keys, each corresponding to letters, numbers, symbols, and function commands.
    \n\nA computer keyboard is an essential input device used for typing, controlling software, and improving productivity. Whether for general use, gaming, or professional applications, selecting the right keyboard depends on user needs and preferences.\n\n</string>
    <string name="speaker_menu_text">Sound Speaker</string>
    <string name="speaker_img_1">this is speaker image 1</string>
    <string name="speaker_img_2">this is speaker image 2</string>
    <string name="speaker_img_3">this is speaker image 3</string>
    <string name="speaker_teach">A computer speaker is an output device that converts electrical audio signals into sound, allowing users to listen to music, video audio, game sounds, and system notifications. It is an essential peripheral for both entertainment and productivity purposes.
    \n\n<b>Functions of Computer Speakers</b>
    \n\n1. <b>Audio Output:</b> Plays music, movies, video calls, and system sounds.
    \n2. <b>Gaming Experience:</b> Provides immersive sound effects in games.
    \n3. <b>Communication:</b> Enhances audio quality during online meetings and video calls.
    \n4. <b>Entertainment:</b> Supports streaming services and media playback with enhanced audio.
    \n5. <b>Audio Alerts:</b> Provides system notifications, error sounds, and alarms.
    \n\n Computer speakers enhance the audio experience by providing better sound quality for work, entertainment, and gaming. Depending on your needs, you can choose from budget options to high-end surround sound systems.\n\n</string>
    <string name="webcam_menu_text">WebCam</string>
    <string name="webcam_img_1">this is monitor image 1</string>
    <string name="webcam_img_2">this is monitor image 2</string>
    <string name="webcam_img_3">this is monitor image 3</string>
    <string name="webcam_teach">A webcam (short for "web camera") is a digital video camera that connects to a computer and is used for capturing live video and images. It enables users to conduct video calls, live stream, attend virtual meetings, and record videos. Webcams are commonly used in personal and professional settings such as remote work, online education, and content creation.
    \n\nCommon Webcam Connectivity Options
    \n1. <b>USB:</b> Most webcams connect via USB 2.0 or 3.0.
    \n2. <b>Wi-Fi/Bluetooth:</b> Wireless options allow placement flexibility.
    \n3. <b>Thunderbolt/USB-C:</b> High-speed connections for premium webcams.
    \nA webcam is an essential tool for communication, content creation, and surveillance. Whether for professional meetings, online learning, or streaming, selecting the right webcam depends on factors like resolution, frame rate, and additional features such as autofocus and low-light correction.\n\n</string>
    <string name="usb_menu_text">Hard Disc</string>
    <string name="usb_img_1">this is usb image 1</string>
    <string name="usb_img_2">this is usb image 2</string>
    <string name="software_def">Definition of Computer Software</string>
    <string name="system_software_def">System Software</string>
    <string name="application_def">Application Software</string>
    <string name="programming_def">Programming Software</string>
    <string name="function_software_def">Functions of Software</string>
    <string name="software_hardware_def">Software vs Hardware</string>
    <string name="example_software_def">Examples of Popular Software</string>
</resources>